<resources>
    <string name="app_name">随阅</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pre_refresh_data" translatable="false">refresh_data</string>
    <string name="pre_get_image" translatable="false">get_image</string>
    <string name="pre_cache_size" translatable="false">cache_size</string>
    <string name="pre_feedback" translatable="false">feedback</string>
    <string name="pre_author" translatable="false">author</string>
    <string name="pre_version" translatable="false">version</string>
    <string name="pre_nav_color" translatable="false">pre_nav_color</string>
    <string name="pre_use_local" translatable="false">pre_use_local</string>
    <string name="pre_status_bar" translatable="false">pre_status_bar</string>
    <string name="text_joke">　　男生拉着女生沮丧着脸说，再给我一次机会，求求你！说好不提分手的！<br />\r\n　　女生甩开男孩的手说：你TM现在在我心里就是个菩萨，除了拜拜我什么都不想做。</string>
</resources>
